--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.5
+  url_launcher: ^6.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
